feat : 어노테이션으로 변경